changes for version 1.1